# rust-dnscat

./: .env  CHANGELOG.md  Cargo.toml  LICENSE  README.md
dnscat/: Cargo.toml  README.md
dnscat-client/: Cargo.toml
dnscat-client/src/: main.rs
dnscat-server/: Cargo.toml
dnscat/examples/: basic-client.rs
dnscat/src/: lib.rs  session.rs
dnscat/src/cli/: client.rs  mod.rs
dnscat/src/client/: builder.rs  exchange.rs  mod.rs
dnscat/src/encryption/: mod.rs  standard.rs
dnscat/src/packet/: mod.rs  session.rs
dnscat/src/transport/: echo.rs  mod.rs  split.rs
dnscat/src/transport/dns/: client.rs  endpoint.rs  mod.rs  name.rs  resolver.rs
dnscat/src/util/: encdec.rs  hex.rs  parse.rs
examples/: basic.rs
src/: client.rs  encdec.rs  encryption.rs  hex.rs  lib.rs  message.rs  packet.rs  payload.rs  session.rs  util.rs
src/cli/: client.rs  mod.rs
src/conn/: builder.rs  echo.rs  enc.rs  handshake.rs  io.rs  mod.rs
src/encryption/: mod.rs  standard.rs
src/message/: ip.rs  mod.rs  payload.rs
src/packet/: mod.rs  ping.rs  session.rs
src/transport/: conn.rs  datagram.rs  dns.rs  echo.rs  exchange.rs  mod.rs  split.rs
src/transport/dns/: client.rs  endpoint.rs  ip.rs  mod.rs  name.rs  trust_impl.rs
src/util/: bbuf_mut.rs  encdec.rs  hex.rs  parse.rs  sbytes.rs
