[package]
name = "dnscat2"
version = "0.1.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"

[dependencies]
log = "~0.4"
bytes = "~0.5"
bitflags = "~1.2"
tokio = "~0.2"
futures = "~0.3"
futures-timer = "~3.0"
trust-dns-proto = "~0.19"
trust-dns-client = "~0.19"
rand = "~0.7"
itertools = "~0.8"
arrayvec = "~0.5"

[dev-dependencies]
dotenv = "~0.15"
rand_pcg = "~0.2"
env_logger = "~0.7"
tokio = { version = "~0.2", features = ["full"] }