[package]
name = "dnscat"
version = "0.1.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"

[[bin]]
name = "dnscat"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "dotenv", "env_logger", "trust-dns-resolver", "tokio/full"]

[dependencies]
log = "~0.4"
bytes = "~0.5"
bitflags = "~1.2"
tokio = "~0.2"
futures = "~0.3"
futures-timer = "~3.0"
trust-dns-proto = "~0.19"
trust-dns-client = "~0.19"
rand = "~0.7"
itertools = "~0.8"
arrayvec = "~0.5"
failure = "~0.1"
clap = { git = "https://github.com/clap-rs/clap", optional = true }
env_logger = { version = "~0.7", optional = true }
dotenv = { version = "~0.15", optional = true }
trust-dns-resolver = { version = "~0.19", optional = true }

[dev-dependencies]
rand_pcg = "~0.2"
