[package]
name = "dnscat-client"
version = "0.1.1"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
categories = ["network-programming"]
description = "Standalone DNSCAT2 client"
documentation = "https://docs.rs/dnscat"
homepage = "https://github.com/avitex/rust-dnscat"
repository = "https://github.com/avitex/rust-dnscat"
license = "MIT"

[dependencies]
dnscat = { version = "0.1", features = ["client-cli"] }
tokio = { version = "0.2", features = ["macros"] }
